--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Family Guy Bowling</title>
-    <meta name="description" content="Family Guy Bowling. Freaking Chaotic as Crap, Lois.">
+    <title>BebraBox</title>
+    <meta name="description" content="Family Guy Bowling.">
     <meta name="application-name" content="Jackbox.TV">
 
-    <meta name="og:url" content="https://djchrunchisi.github.io/">
-    <meta name="og:title" content="djchrunchisi.github.io">
+    <meta name="og:url" content="https://familyguybowling.vercel.app/">
+    <meta name="og:title" content="familyguybowling.vercel.app">
     <meta name="og:type" content="website">
-    <meta name="og:description" content="Family Guy Bowling. Freaking Chaotic as Crap, Lois.">
+    <meta name="og:description" content="Family Guy Bowling.">
     <meta name="og:image" content="./src/images/favicon-196x196.png">
 
     <meta name="mobile-web-app-capable" content="yes">
@@ -94,7 +94,7 @@
         gtag('config', 'G-V1QJVQMYF1')
     </script>
     <script type="module" crossorigin="" src="script-0.js"></script>
-    <link rel="stylesheet" crossorigin="" href="style-0.css">
+    <link rel="stylesheet" href="style-0.css">
 </head>
 
 <body>
@@ -107,6 +107,7 @@
     </div>
 
     <div id="app" class="app"></div>
+
 
 
 </body>
