--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>BebraBox</title>
+    <title>FamilyGuyBowling</title>
     <meta name="description" content="Family Guy Bowling.">
     <meta name="application-name" content="Jackbox.TV">
 
-    <meta name="og:url" content="https://familyguybowling.vercel.app/">
-    <meta name="og:title" content="familyguybowling.vercel.app">
+    <meta name="og:url" content="https://djchrunchisi.github.io/">
+    <meta name="og:title" content="djchrunchisi.github.io">
     <meta name="og:type" content="website">
     <meta name="og:description" content="Family Guy Bowling.">
     <meta name="og:image" content="./src/images/favicon-196x196.png">
